# embassy-sandbox

./: .gdbinit  Cargo.toml  dump.sh  memory.x  openocd.cfg  openocd.gdb  rustfmt.toml  syms  test.sh
.cargo/: config.toml
.run/: Rust Embedded.run.xml
src/: bitbang.rs  cli.rs  flash.rs  graphics.rs  lib.rs  log.rs  main.rs  net.rs  sdram.rs  tftp.rs  util.rs
src/graphics/: accelerated.rs  color.rs  display.rs  framebuffer.rs  gui.rs
src/graphics/display/: dma2d.rs  dsi.rs  image.rs  ltdc.rs  otm8009a.rs
src/graphics/gui/: boxes.rs  eg_compat.rs  ext.rs  text.rs
src/graphics/gui/text/: font.rs  textbox.rs
src/graphics/gui/text/font/: firamono_16.pgm  firamono_18.pgm  firamono_24.pgm  firamono_28.pgm  firamono_32.pgm  firamono_40.pgm  firamono_48.pgm  firamono_56.pgm  firamono_64.pgm
src/util/: drop_guard.rs  mem.rs  typelevel.rs
src/util/typelevel/: associate.rs  flatten.rs  impls.rs  map.rs  option.rs
src/util/typelevel/impls/: array.rs  option.rs  result.rs
