[package]
name = "embassy-sandbox"
version = "0.1.0"
edition = "2021"

[lib]
test = false
bench = false
doctest = false

[[bin]]
name = "embassy_sandbox"
path = "src/main.rs"
test = false
bench = false
doctest = false

panic = "abort"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core", "inline-asm"] }
cortex-m-rt = "0.7.3"
embassy-executor = { version = "0.6.0", features = ["nightly", "arch-cortex-m", "integrated-timers", "executor-thread"] }
embassy-stm32 = { version = "0.1.0", features = ["memory-x", "time", "time-driver-any", "stm32f769ni", "exti"] }
embassy-sync = "0.6.0"
embassy-time = "0.3.2"
embedded-hal-async = "1.0.0"
embedded-io-async = "0.6.1"
panic-halt = "0.2.0"
