[package]
name = "embassy-sandbox"
version = "0.1.0"
edition = "2021"

[lib]
test = false
bench = false
doctest = false

[[bin]]
name = "embassy_sandbox"
path = "src/main.rs"
test = false
bench = false
doctest = false

panic = "abort"

[dependencies]
bitflags = "2.6.0"
cortex-m = { version = "0.7.7", features = ["critical-section-single-core", "inline-asm"] }
cortex-m-rt = "0.7.3"
embassy-executor = { version = "0.6.0", features = ["nightly", "arch-cortex-m", "integrated-timers", "executor-thread"] }
embassy-futures = "0.1.1"
embassy-net = { version = "0.4.0", features = ["dhcpv4-hostname", "medium-ethernet", "tcp"] }
embassy-stm32 = { version = "0.1.0", features = ["unstable-pac", "memory-x", "time", "time-driver-any", "stm32f769ni", "exti"] }
embassy-sync = "0.6.0"
embassy-time = "0.3.2"
embedded-hal-async = "1.0.0"
embedded-io-async = "0.6.1"
heapless = "0.8.0"
nom = { version = "7.1.3", default-features = false }
panic-halt = "0.2.0"
rand_core = "0.6.4"
smoltcp = { version = "0.11.0", default-features = false }
sntpc = { version = "0.3.9", default-features = false, features = ["async"] }
static_cell = "2.1.0"
