[package]
name = "embassy-sandbox"
version = "0.1.0"
edition = "2021"


[lib]
test = false
bench = false
doctest = false

[[bin]]
name = "embassy_sandbox"
path = "src/main.rs"
test = false
bench = false
doctest = false
panic = "abort"

[features]
default = ["cross"]
cross = [
    "dep:cortex-m",
    "dep:cortex-m-rt",
    "dep:embassy-executor",
    # "dep:embassy-futures",
    "dep:embassy-stm32",
    "dep:stm32-fmc",
]

[dependencies]
bitflags = { version = "2.6.0", features = ["bytemuck"] }
bytemuck = { version = "1.18.0", features = ["derive"] }
cortex-m = { version = "0.7.7", features = [
    "critical-section-single-core",
    "inline-asm",
], optional = true }
cortex-m-rt = { version = "0.7.3", optional = true }
embassy-executor = { version = "0.6.0", features = [
    "nightly",
    "arch-cortex-m",
    "integrated-timers",
    "executor-thread",
], optional = true }
embassy-futures = { version = "0.1.1" }
embassy-net = { version = "0.4.0", features = [
    "dhcpv4-hostname",
    "proto-ipv4",
    "medium-ethernet",
    "tcp",
    "udp",
] }
embassy-stm32 = { version = "0.1.0", features = [
    "unstable-pac",
    "memory-x",
    "time",
    "time-driver-any",
    "stm32f769ni",
    "exti",
], optional = true }
embassy-sync = "0.6.0"
embassy-time = "0.3.2"
embedded-cli = { git = "https://github.com/melvdlin/embedded-cli.git", version = "0.1.0" }
embedded-hal-async = "1.0.0"
embedded-io-async = "0.6.1"
futures-util = { version = "0.3.31", default-features = false }
getargs = { version = "0.5.0", default-features = false }
heapless = "0.8.0"
itertools = { version = "0.13.0", default-features = false }
memchr = { version = "2.7.4", default-features = false }
nom = { version = "7.1.3", default-features = false }
num-traits = { version = "0.2.19", default-features = false }
panic-halt = "0.2.0"
rand_core = "0.6.4"
scuffed-write = { git = "https://github.com/melvdlin/scuffed-write.git", version = "0.1.0" }
smoltcp = { git = "https://github.com/smoltcp-rs/smoltcp", rev = "dd43c8f189178b0ab3bda798ed8578b5b0a6f094", default-features = false, features = [
] }
sntpc = { version = "0.3.9", default-features = false, features = ["async"] }
static_cell = "2.1.0"
stm32-fmc = { version = "0.3.2", optional = true }
tap = "1.0.1"
ttftp = "0.2.0"

[patch.crates-io]
heapless = { git = "https://github.com/rust-embedded/heapless.git", rev = "0ebca2320970b8a1aa3e58ceba924f8c65385946" }
# nom = { git = "https://github.com/melvdlin/nom.git", rev = "a542852ea21598586a43c2fc8a4d37d8381a5e4d" }
# embassy-boot-stm32 = { git = "https://github.com/melvdlin/embassy.git", rev = "d2e656b23a85be91c40ca1a1046ed4d4435bd001" }
# embassy-boot = { git = "https://github.com/melvdlin/embassy.git", rev = "d2e656b23a85be91c40ca1a1046ed4d4435bd001" }
# embassy-embedded-hal = { git = "https://github.com/melvdlin/embassy.git", rev = "d2e656b23a85be91c40ca1a1046ed4d4435bd001" }
# embassy-executor-macros = { git = "https://github.com/melvdlin/embassy.git", rev = "d2e656b23a85be91c40ca1a1046ed4d4435bd001" }
embassy-executor = { git = "https://github.com/melvdlin/embassy.git", rev = "d2e656b23a85be91c40ca1a1046ed4d4435bd001" }
embassy-futures = { git = "https://github.com/melvdlin/embassy.git", rev = "d2e656b23a85be91c40ca1a1046ed4d4435bd001" }
embassy-net = { git = "https://github.com/melvdlin/embassy.git", rev = "d2e656b23a85be91c40ca1a1046ed4d4435bd001" }
embassy-stm32 = { git = "https://github.com/melvdlin/embassy.git", rev = "d2e656b23a85be91c40ca1a1046ed4d4435bd001" }
embassy-sync = { git = "https://github.com/melvdlin/embassy.git", rev = "d2e656b23a85be91c40ca1a1046ed4d4435bd001" }
embassy-time = { git = "https://github.com/melvdlin/embassy.git", rev = "d2e656b23a85be91c40ca1a1046ed4d4435bd001" }
# embassy-time-driver = { git = "https://github.com/melvdlin/embassy.git", rev = "d2e656b23a85be91c40ca1a1046ed4d4435bd001" }
# embassy-time-queue-driver = { git = "https://github.com/melvdlin/embassy.git", rev = "d2e656b23a85be91c40ca1a1046ed4d4435bd001" }

# embassy-executor = { path = "../embassy/embassy-executor" }
# embassy-futures = { path = "../embassy/embassy-futures" }
# embassy-net = { path = "../embassy/embassy-net" }
# embassy-stm32 = { path = "../embassy/embassy-stm32" }
# embassy-sync = { path = "../embassy/embassy-sync" }
# embassy-time = { path = "../embassy/embassy-time" }

[lints.rust]
unused_must_use = "deny"

[lints.clippy]
try_err = "warn"
